--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ button {
   border-radius: 10px;
   background-image: linear-gradient(to left, #69e8ece6, #f87cffeb);
   cursor: pointer;
+  font-weight: 600;
 }
 button:hover {
   background-image: linear-gradient(to left, #92fbffe6, #faa2ffeb);
