--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ input[type="email"] {
   outline: none;
   border-radius: 4px;
   padding-left: 10px;
+  background-color:#f7fbff88;
 }
 input[type="checkbox"] {
   vertical-align: middle;
@@ -59,6 +60,7 @@ button {
   height: 40px;
   border: none;
   border-radius: 10px;
+  font-size:1.1em;
   background-image: linear-gradient(to left, #69e8ece6, #f87cffeb);
   cursor: pointer;
   font-weight: 600;
