--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Trebuchet MS", sans-serif;
+  font-family: "poppins", "Trebuchet MS", sans-serif;
 }
 body {
   background-image: linear-gradient(to right, #7ebfee, #ff95bd);
@@ -10,7 +11,7 @@ body {
 
 main {
   width: 400px;
-  height: 600px;
+  height: 630px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.477);
   background-color: rgba(255, 255, 255, 0.53);
@@ -43,26 +44,37 @@ input[type="email"] {
   outline: none;
   border-radius: 4px;
   padding-left: 10px;
-  background-color:#f7fbff88;
+  background-color: #f7fbff88;
 }
 input[type="checkbox"] {
   vertical-align: middle;
   margin: 0px 0px;
-  margin: 30px 0px;
+  margin: 20px 0px;
   margin-left: 100px;
 }
 .buton {
   display: flex;
   justify-content: center;
 }
+.already {
+  text-align: center;
+  word-spacing: 3px;
+}
+.already > a {
+  text-decoration: none;
+}
+.already > a:hover {
+  text-decoration: underline;
+}
 button {
   width: 140px;
   height: 40px;
+  margin-bottom: 20px;
   border: none;
   border-radius: 10px;
-  font-size:1.1em;
   background-image: linear-gradient(to left, #69e8ece6, #f87cffeb);
   cursor: pointer;
+  font-size: 1.1em;
   font-weight: 600;
 }
 button:hover {
