--- a/style.css
+++ b/style.css
@@ -6,18 +6,18 @@
   font-family: "poppins", "Trebuchet MS", sans-serif;
 }
 body {
-  background-image: linear-gradient(to right, #7ebfee, #ff95bd);
+  background-image: linear-gradient(to right, #0084ff, #ff2e7e);
 }
 
 main {
   width: 400px;
   height: 630px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.477);
-  background-color: rgba(255, 255, 255, 0.53);
+  box-shadow: 0px 0px 10px #ffffff7a;
+  background-color: #ffffffa5;
 }
 .container {
-  margin-top: 55px;
+  margin-top: 45px;
   display: flex;
   justify-content: center;
 }
@@ -72,12 +72,12 @@ button {
   margin-bottom: 20px;
   border: none;
   border-radius: 10px;
-  background-image: linear-gradient(to left, #69e8ece6, #f87cffeb);
+  background-image: linear-gradient(to left, #00edf5, #f42bff);
   cursor: pointer;
   font-size: 1.1em;
   font-weight: 600;
 }
 button:hover {
-  background-image: linear-gradient(to left, #92fbffe6, #faa2ffeb);
+  background-image: linear-gradient(to left, #00edf5b5, #f42bffb0);
   color: #1d1d1d;
 }
